--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-native-svg": "^14.0.0",
     "react-popup": "^0.11.2",
     "react-router-dom": "^6.19.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
